fix project thumb text align

--- a/src/components/ProjectThumb.astro
+++ b/src/components/ProjectThumb.astro
@@ -35,5 +35,6 @@ const { title, imageSrc, url } = Astro.props;
         display: flex;
         justify-content: center;
         align-items: center;
+        text-align: center;
     }
 </style>
